# clean-rust

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20230728113220_create_users_table.sql
requests/: users.http
src/: config.rs  container.rs  main.rs
src/__tests__/: mod.rs
src/__tests__/application/: user.rs
src/__tests__/domain/: user.rs
src/application/: mod.rs
src/application/common/: api_response.rs  errors.rs  mod.rs  types.rs
src/application/common/interfaces/: mod.rs
src/application/common/interfaces/authentication/: jwt_token_handler.rs
src/application/common/interfaces/persistance/: user_repository.rs
src/application/usecases/user/: dto.rs  interface.rs  mod.rs  service.rs
src/common/: config.rs  errors.rs  mod.rs
src/domain/entities/: user.rs
src/infrastructure/: mod.rs
src/infrastructure/authentication/: jwt_token_handler.rs  mod.rs
src/infrastructure/common/: date_service.rs  mod.rs
src/infrastructure/persistance/: mod.rs
src/infrastructure/persistance/memory/: mod.rs
src/infrastructure/persistance/memory/models/: user.rs
src/infrastructure/persistance/memory/repositories/: user.rs
src/infrastructure/persistance/postgres/: mod.rs
src/infrastructure/persistance/postgres/models/: user.rs
src/presentation/: mod.rs  routes.rs  server.rs
src/presentation/controllers/: mod.rs
src/presentation/controllers/_default/: handler.rs
src/presentation/controllers/users/: dto.rs  handler.rs
src/presentation/middlewares/: authentication.rs
(+1 files in other folders)
